# younger-dryas-civilizations

./: .gitignore  Cargo.toml  README.md  engineering_log.md
.github/workflows/: ci.yml
ai/eval/: Cargo.toml
ai/eval/src/: lib.rs
ai/negotiator/: Cargo.toml
ai/negotiator/src/: lib.rs
ai/planner/: Cargo.toml
ai/planner/src/: lib.rs
client/cli/: Cargo.toml
client/cli/src/: main.rs
docs/contracts/: 00_INDEX.md  combat.md  deal_DSL.md  match_gRPC.md  simCore.md  telemetry.md
schemas/: deal.schema.json
services/match/: Cargo.toml  build.rs
services/match/proto/: match.proto
services/match/src/: lib.rs
simcore/: Cargo.toml
simcore/src/: lib.rs
