[workspace]
resolver = "2"
members = [
    "simcore",
    "services/match",
    "ai/eval",
    "ai/planner",
    "ai/negotiator",
    "client/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# gRPC/tonic
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }

# Internal crates
simcore = { path = "simcore" }
ai-eval = { path = "ai/eval" }
ai-planner = { path = "ai/planner" }
ai-negotiator = { path = "ai/negotiator" }

