[package]
name = "match-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
simcore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tonic-build = "0.11"

